// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> should change style if disabled 1`] = `
.c3 {
  box-sizing: border-box;
  min-width: 0;
  color: #374151;
  width: 20px;
  height: 20px;
  stroke: currentColor;
  color: #000;
}

.c0 {
  box-sizing: border-box;
  min-width: 0;
  color: #374151;
  position: relative;
  display: block;
}

.c1 {
  -webkit-appearance: none;
  -webkit-box-align: center;
  -webkit-writing-mode: horizontal-tb;
  width: 100%;
  background-color: #fff;
  border-width: 1px;
  border-color: #d2d6dc;
  color: #374151;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  white-space: nowrap;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  border-radius: 5px;
  -webkit-transition: all 150ms ease 0s;
  transition: all 150ms ease 0s;
  outline: none;
  cursor: pointer;
}

.c1:focus {
  border-color: #a4cafe;
  box-shadow: 0 0 0 3px rgba(118,169,250,.45);
  outline: 0;
}

.c1:disabled {
  background-color: #EAEAEA;
  color: #8F8F8F;
  cursor: not-allowed;
}

.c2 {
  position: absolute;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 1.5rem;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  right: 15px;
  top: 50%;
  pointer-events: none;
  z-index: 2;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div>
  <label
    for="select-input"
  >
    Name
  </label>
  <div
    class="c0"
  >
    <select
      class="c1"
      disabled=""
      id="select-input"
    >
      <option
        value=""
      >
        Default
      </option>
      <option
        value="second"
      >
        Second
      </option>
    </select>
    <div
      class="c2"
    >
      <svg
        class="c3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="6 9 12 15 18 9"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`<Select /> should render 1`] = `
.c3 {
  box-sizing: border-box;
  min-width: 0;
  color: #374151;
  width: 20px;
  height: 20px;
  stroke: currentColor;
  color: #000;
}

.c0 {
  box-sizing: border-box;
  min-width: 0;
  color: #374151;
  position: relative;
  display: block;
}

.c1 {
  -webkit-appearance: none;
  -webkit-box-align: center;
  -webkit-writing-mode: horizontal-tb;
  width: 100%;
  background-color: #fff;
  border-width: 1px;
  border-color: #d2d6dc;
  color: #374151;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  white-space: nowrap;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  border-radius: 5px;
  -webkit-transition: all 150ms ease 0s;
  transition: all 150ms ease 0s;
  outline: none;
  cursor: pointer;
}

.c1:focus {
  border-color: #a4cafe;
  box-shadow: 0 0 0 3px rgba(118,169,250,.45);
  outline: 0;
}

.c1:disabled {
  background-color: #EAEAEA;
  color: #8F8F8F;
  cursor: not-allowed;
}

.c2 {
  position: absolute;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 1.5rem;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  right: 15px;
  top: 50%;
  pointer-events: none;
  z-index: 2;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div>
  <label
    for="select-input"
  >
    Name
  </label>
  <div
    class="c0"
  >
    <select
      class="c1"
      id="select-input"
    >
      <option
        value=""
      >
        Default
      </option>
      <option
        value="second"
      >
        Second
      </option>
    </select>
    <div
      class="c2"
    >
      <svg
        class="c3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="6 9 12 15 18 9"
        />
      </svg>
    </div>
  </div>
</div>
`;
